# libgenisys

./: .gitignore  CMakeLists.txt  LICENSE.MD  README.md
CMake/: FindCoquiSTT.cmake  FindDeepSpeech.cmake  FindGin.cmake  FindJUCE.cmake
Modules/: CMakeLists.txt
TestBench/: CMakeLists.txt
TestBench/Source/: CommonHeader.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  Paths.h
libgenisys-dsp/: CMakeLists.txt
libgenisys-dsp/gin/: gin_audiofifo.h  gin_resamplingfifo.h
libgenisys-dsp/juce/: juce_AbstractFifo.cpp  juce_AbstractFifo.h  juce_Atomic.h  juce_AudioBlock.h  juce_AudioDataConverters.cpp  juce_AudioDataConverters.h  juce_AudioSampleBuffer.h  juce_ByteOrder.h  juce_ContainerDeletePolicy.h  juce_DelayLine.cpp  juce_DelayLine.h  juce_DryWetMixer.cpp  juce_DryWetMixer.h  juce_FloatVectorOperations.cpp  juce_FloatVectorOperations.h  juce_HeapBlock.h  juce_MathsFunctions.h  juce_Memory.h  juce_PlatformDefs.h  juce_ProcessContext.h  juce_Range.h  juce_ReferenceCountedObject.h  juce_SingleThreadedAbstractFifo.h  juce_SmoothedValue.h
libgenisys-dsp/libsamplerate/: common.h  fastest_coeffs.h  mid_qual_coeffs.h  samplerate.c  samplerate.h  src_linear.c  src_sinc.c  src_zoh.c
libs/Linux/: libsox.so.3
libs/Windows/: libkenlm.so.if.lib  libstt.so.if.lib  rnnoise.lib
scripts/: CloseProToolsMac.scpt
scripts/macOS/: OpenProToolsMac.scpt
src/: LibGenisysAPI.cpp  LibGenisysAPI.h  LibGenisysImpl.cpp  LibGenisysImpl.h
tools/: CMakeLists.txt
tools/wavio/: CMakeLists.txt  wavio.cpp  wavio.h  wavreader.c  wavreader.h  wavwriter.c  wavwriter.h
